test: expand the golden corpus and make it extensible
The corpus was one scenario in five files: trades and a book snapshot. It never
exercised a depth diff, a footprint accumulating across repeated prices, a
non-default indicator set, a seek, or more than one source — and every binding's
golden test named that one scenario by hand, so adding a second would have meant
editing nine test files in nine languages.

`golden/manifest.json` fixes the second problem, which is the one that mattered.
Each entry names a config, a command sequence and an expected frame; every
binding reads the manifest and replays whatever it finds. Adding a scenario is
now one entry in the Rust suite plus a regeneration, and it reaches all eight
language surfaces with no test changes anywhere.

Six scenarios, each pinning something the basic one could not: an L2 diff stream
with removals and out-of-range inserts; repeated prices on both sides so the
footprint accumulates rather than recording one entry per price; a real indicator
set driven far enough to produce values, multi-output fields and per-indicator
series; the time machine, driving to the end and rewinding; and two sources at
once with focus on the second. Twenty-nine files, against the backtester's
twenty-one.

The command sequences live in files rather than as arrays in the manifest, and
that is a design decision rather than a formatting one. A command is a JSON
string full of quotes; embedding it leaves the manifest full of escapes, and the
two bindings that deliberately carry no JSON dependency would have to unpick them
by hand. With the commands in text files, every manifest value is a plain path,
and Java and R both read it by splitting on the quote character — no parser, no
regular expression, nothing to get subtly wrong.

Two assertions the old suite folded into its single test are now their own, since
they are properties rather than fixtures: a drained replay holds its frame, and a
seek back to index 2 reproduces the frame th